// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TzLabel Component > should render disable state 1`] = `
<div>
  <span
    class="rounded font-medium px-2 py-1  bg-accent dark:bg-dark-accent hover:bg-accent-1 active:bg-accent-2 focus:outline-accent dark:hover:bg-dark-accent-1 dark:active:bg-dark-accent-2 dark:focus:outline-dark-accent text-inverse-accent dark:text-inverse-dark-accent opacity-50"
  >
    Locked
  </span>
</div>
`;

exports[`TzLabel Component > should render span 1`] = `
<div>
  <span
    class="rounded font-medium px-2 py-1  bg-accent dark:bg-dark-accent hover:bg-accent-1 active:bg-accent-2 focus:outline-accent dark:hover:bg-dark-accent-1 dark:active:bg-dark-accent-2 dark:focus:outline-dark-accent text-inverse-accent dark:text-inverse-dark-accent"
  >
    Label
  </span>
</div>
`;
